--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@mipmap/fondo_estrellas">
 
     <ImageView
         android:id="@+id/IV_big_circle"
         android:layout_width="128dp"
         android:layout_height="128dp"
-        app:srcCompat="@drawable/ic_big_circle"
+        app:srcCompat="@mipmap/planeta_estatico"
         android:layout_centerInParent="true"
         />
 
@@ -18,6 +19,6 @@
         android:id="@+id/IV_small_circle"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        app:srcCompat="@drawable/ic_baseline_slow_motion_video_24"
+        app:srcCompat="@mipmap/planeta_movil"
         android:layout_centerInParent="true"/>
 </RelativeLayout>
